--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,15 @@
   </head>
 
   <body>
+    <% content_for(:navbar) do %>
+      <li><a href="/">Home</a></li>
+      <li><a href="something/else">Something else</a></li>
+      <li><a href="etc">Etc.</a></li>
+    <% end %>
+
+    <%= flash[:alert] %>
+    <%= flash[:notice] %>
+
     <%= yield %>
   </body>
 </html>
