--- a/app/views/surveys/index.html.erb
+++ b/app/views/surveys/index.html.erb
@@ -3,7 +3,7 @@
 <% if @surveys.any? %>
   <ul>
     <% @surveys.each do |survey| %>
-      <li><%= link_to survey.name, survey_path(survey) %></li>
+      <li><%= link_to survey.title, survey_path(survey) %></li>
     <% end %>
   </ul>
 <% else %>
