--- a/app/views/surveys/show.html.erb
+++ b/app/views/surveys/show.html.erb
@@ -1,5 +1,5 @@
-<h1><%= @survey.title %></h1>
-<h3><%= @survey.author %></h3>
+<h1>Title: <%= @survey.title %></h1>
+<h3>Author: <%= @survey.author %></h3>
 
 <% if @survey.questions.any? %>
   <h4>Here are the questions for this survey:</h4>
